fix minor bugs. change target version to ios9

--- a/exarea/View/Base.lproj/Login.storyboard
+++ b/exarea/View/Base.lproj/Login.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
-        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -30,11 +29,11 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EXAREA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z9J-PZ-VGh">
                                 <rect key="frame" x="86.5" y="297.5" width="202" height="72.5"/>
                                 <fontDescription key="fontDescription" name="SegoeUI-Bold" family="Segoe UI" pointSize="53"/>
-                                <color key="textColor" name="color-font"/>
+                                <color key="textColor" red="0.99215686274509807" green="0.83137254901960778" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" name="color-background"/>
+                        <color key="backgroundColor" red="0.10196078431372549" green="0.12549019607843137" blue="0.20784313725490194" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="z9J-PZ-VGh" firstAttribute="centerY" secondItem="qof-s5-4SN" secondAttribute="centerY" id="lzU-tC-3Pk"/>
                             <constraint firstItem="z9J-PZ-VGh" firstAttribute="centerX" secondItem="qof-s5-4SN" secondAttribute="centerX" id="uIW-hx-51H"/>
@@ -55,23 +54,42 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="EXAREA" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NVR-90-BwD">
-                                <rect key="frame" x="87" y="174" width="201.5" height="72.5"/>
+                                <rect key="frame" x="87" y="155.5" width="201.5" height="72.5"/>
                                 <fontDescription key="fontDescription" name="SegoeUI-Bold" family="Segoe UI" pointSize="53"/>
-                                <color key="textColor" name="color-font"/>
+                                <color key="textColor" red="0.99215686274509807" green="0.83137254901960778" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="UnQ-8e-EqK">
-                                <rect key="frame" x="56.5" y="269.5" width="262.5" height="128.5"/>
+                                <rect key="frame" x="37.5" y="248" width="300" height="171.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="gyv-is-PtF">
-                                        <rect key="frame" x="0.0" y="0.0" width="262.5" height="71"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="300" height="114"/>
                                         <subviews>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="vGi-0z-xog" customClass="SkyFloatingLabelTextFieldWithIcon" customModule="exarea" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="0.0" width="262.5" height="28"/>
-                                                <color key="tintColor" name="color-font"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="RQR-1L-Qwh">
+                                                <rect key="frame" x="0.0" y="0.0" width="300" height="28"/>
+                                                <subviews>
+                                                    <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" apportionsSegmentWidthsByContent="YES" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="RhN-kl-JPe">
+                                                        <rect key="frame" x="0.0" y="0.0" width="131" height="29"/>
+                                                        <segments>
+                                                            <segment title="غرفه‌دار"/>
+                                                            <segment title="بازدید کننده"/>
+                                                        </segments>
+                                                        <color key="tintColor" red="0.99215686274509807" green="0.83137254901960778" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    </segmentedControl>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ثبت نام به عنوان" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="gV8-wV-thg">
+                                                        <rect key="frame" x="194" y="0.0" width="106" height="28"/>
+                                                        <fontDescription key="fontDescription" name="IRANSans" family="IRANSans" pointSize="16"/>
+                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="right" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="vGi-0z-xog" customClass="SkyFloatingLabelTextFieldWithIcon" customModule="exarea" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="43" width="300" height="28"/>
+                                                <color key="tintColor" red="0.99215686274509807" green="0.83137254901960778" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" name="IRANSans" family="IRANSans" pointSize="16"/>
-                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numberPad" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                                 <userDefinedRuntimeAttributes>
                                                     <userDefinedRuntimeAttribute type="color" keyPath="textColor">
                                                         <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -132,9 +150,9 @@
                                                     <outlet property="delegate" destination="pyo-eP-pxe" id="1kV-eb-mOE"/>
                                                 </connections>
                                             </textField>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oVo-7r-FLA" customClass="SkyFloatingLabelTextFieldWithIcon" customModule="exarea" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="43" width="262.5" height="28"/>
-                                                <color key="tintColor" name="color-font"/>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="right" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="oVo-7r-FLA" customClass="SkyFloatingLabelTextFieldWithIcon" customModule="exarea" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="86" width="300" height="28"/>
+                                                <color key="tintColor" red="0.99215686274509807" green="0.83137254901960778" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <fontDescription key="fontDescription" name="IRANSans" family="IRANSans" pointSize="16"/>
                                                 <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" secureTextEntry="YES" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
@@ -201,7 +219,7 @@
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="593-vw-lDO">
-                                        <rect key="frame" x="0.0" y="91" width="262.5" height="37.5"/>
+                                        <rect key="frame" x="0.0" y="134" width="300" height="37.5"/>
                                         <fontDescription key="fontDescription" name="IRANSans" family="IRANSans" pointSize="16"/>
                                         <state key="normal" title="کلمه عبور خود را فراموش کرده‌ام">
                                             <attributedString key="attributedTitle">
@@ -226,14 +244,14 @@
                                 </constraints>
                                 <fontDescription key="fontDescription" name="IRANSans" family="IRANSans" pointSize="17"/>
                                 <state key="normal" title="ورود">
-                                    <color key="titleColor" name="color-font"/>
+                                    <color key="titleColor" red="0.99215686274509807" green="0.83137254901960778" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="didTapLoginButton" destination="pyo-eP-pxe" eventType="touchUpInside" id="u9n-0u-tzh"/>
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" name="color-background"/>
+                        <color key="backgroundColor" red="0.10196078431372549" green="0.12549019607843137" blue="0.20784313725490194" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="UnQ-8e-EqK" firstAttribute="centerX" secondItem="2Ol-Qd-CcL" secondAttribute="centerX" id="5N1-KA-KpE"/>
                             <constraint firstItem="NVR-90-BwD" firstAttribute="centerX" secondItem="2Ol-Qd-CcL" secondAttribute="centerX" id="8LS-i6-9m5"/>
@@ -241,8 +259,8 @@
                             <constraint firstItem="lZ5-q3-whg" firstAttribute="width" secondItem="2Ol-Qd-CcL" secondAttribute="width" multiplier="0.7" priority="999" id="Lzi-94-9fk"/>
                             <constraint firstItem="UnQ-8e-EqK" firstAttribute="centerY" secondItem="2Ol-Qd-CcL" secondAttribute="centerY" id="W9H-JE-cao"/>
                             <constraint firstItem="lZ5-q3-whg" firstAttribute="centerX" secondItem="2Ol-Qd-CcL" secondAttribute="centerX" id="c1I-vS-e6h"/>
-                            <constraint firstItem="UnQ-8e-EqK" firstAttribute="top" secondItem="NVR-90-BwD" secondAttribute="bottom" constant="23" id="wmJ-Re-5wd"/>
-                            <constraint firstItem="UnQ-8e-EqK" firstAttribute="width" secondItem="2Ol-Qd-CcL" secondAttribute="width" multiplier="0.7" id="zKC-QD-1yB"/>
+                            <constraint firstItem="UnQ-8e-EqK" firstAttribute="top" secondItem="NVR-90-BwD" secondAttribute="bottom" constant="20" id="wmJ-Re-5wd"/>
+                            <constraint firstItem="UnQ-8e-EqK" firstAttribute="width" secondItem="2Ol-Qd-CcL" secondAttribute="width" multiplier="0.8" id="zKC-QD-1yB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="EgQ-uX-OhL"/>
                     </view>
@@ -252,6 +270,8 @@
                         <outlet property="loginButton" destination="lZ5-q3-whg" id="vu1-qm-JrH"/>
                         <outlet property="passwordTextField" destination="oVo-7r-FLA" id="N74-cR-Zld"/>
                         <outlet property="phoneNumberTextField" destination="vGi-0z-xog" id="2R2-nF-F7O"/>
+                        <outlet property="segmentControl" destination="RhN-kl-JPe" id="uj5-U6-3Ru"/>
+                        <outlet property="segmentSection" destination="RQR-1L-Qwh" id="h0W-Yr-UG0"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Qg2-mg-dtY" sceneMemberID="firstResponder"/>
@@ -278,11 +298,5 @@
     <resources>
         <image name="icon-lock-90" width="22.5" height="22.5"/>
         <image name="icon-mobile-90" width="22.5" height="22.5"/>
-        <namedColor name="color-background">
-            <color red="0.10196078431372549" green="0.12549019607843137" blue="0.20784313725490197" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="color-font">
-            <color red="0.99215686274509807" green="0.83137254901960789" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
     </resources>
 </document>
